FBMQ Changelog
==============

Latest
------

1.7.0
-----

* Fix, trigger message_handler, postback_handler even if custom callbacks are used
* Feature : Add a callback function in page.send
* Feature : Add a page option 'after_send' (support decorator @page.after_send)

1.6.0
-----

* Support regex in button/quickreply callbacks.

1.5.4
-----

* Support decorators (message handlers and button/quickreply callbacks)
* Deprecated fbmq.handler_webhook method (must use page.handler_webhoo)