@@ -1,6 +1,6 @@
 import json
 from config import CONFIG
-from fbmq import Attachment, Template, QuickReply
+from fbmq import Attachment, Template, QuickReply, NotificationType
 from fbpage import page
 
 USER_SEQ = {}
@@ -136,7 +136,7 @@ def send_message(recipient_id, text):
     if text in special_keywords:
         special_keywords[text](recipient_id)
     else:
-        page.send(recipient_id, text, callback=send_text_callback)
+        page.send(recipient_id, text, callback=send_text_callback, notification_type=NotificationType.REGULAR)
 
 
 def send_text_callback(payload, response):
