@@ -1,5 +1,5 @@
-__version__ = '1.7.0b4'
+__version__ = '1.7.0b5'
 
-from .fbmq import QuickReply, Page
+from .fbmq import *
 from . import attachment as Attachment
 from . import template as Template
